<?xml version="1.0"?>
<package>
  <name>twist_commander</name>
  <version>0.0.0</version>
  <description>
    Publishes Twist Command message to control turtlesim or Kobuki
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/twist_commander</url> -->

  <author>Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>
